--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: bisque;
+    background-color: cadetblue;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -10,25 +10,26 @@ input[type="text"] {
     font-size: 16px;
 }
 button {
-    background-color: cornflowerblue;
+    background-color: gold;
     color: black;
     padding: 12px 12px;
     font-size: 16px;
 }
 
 .notification {
-font-size: 1rem;
-font-weight: 400;
-line-height: 1.5;
-text-align: left;
+text-align: center;
+font-size: 1.5rem;
 box-sizing: border-box;
-position: relative;
-padding: .75rem 1.25rem;
 margin-bottom: 1rem;
 border: 1px solid transparent;
-border-radius: .25rem;
+border-radius: 1rem;
 color: #155724;
 background-color: #d4edda;
 border-color: #c3e6cb;
 margin-top: 1rem;
+padding: 10px;
+}
+
+img {
+    width: 450px;
 }
